--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "cover": "istanbul cover _mocha",
     "start": "npm run build && node ./dist/server.js",
     "lint": "./node_modules/.bin/eslint server --fix",
-     "createTables": "psql -U postgres -f store.sql",
+    "createTables": "psql -U postgres -f store.sql",
     "coveralls": "npm run cover -- --report lcovonly && cat ./coverage/lcov.info | coveralls"
   },
   "repository": {
@@ -59,6 +59,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.12.4",
     "istanbul": "^0.4.5",
-    "mocha-lcov-reporter": "^1.3.0"
+    "mocha-lcov-reporter": "^1.3.0",
+    "nyc": "^13.1.0"
   }
 }
