--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
     "dev": "babel-watch server/server.js",
     "build-babel": "babel -d ./dist ./server -s",
     "build": "npm run clean && npm run build-babel",
-    "test": "mocha --require babel-register server/tests/*.js --exit",
-    "cover": "istanbul cover _mocha",
+    "test": "nyc mocha --require babel-register server/tests/*.js --exit",
     "start": "npm run build && node ./dist/server.js",
     "lint": "./node_modules/.bin/eslint server --fix",
-    "createTables": "psql -U postgres -f store.sql",
-    "coveralls": "npm run cover -- --report lcovonly && cat ./coverage/lcov.info | coveralls"
+    "createQueries": "psql -U postgres -f createQueries.sql",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
