--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "dev": "babel-watch server/server.js",
     "build-babel": "babel -d ./dist ./server -s",
     "build": "npm run clean && npm run build-babel",
-    "test": "nyc mocha --require babel-register server/tests/*.js --exit",
+    "test": "cross-env NODE_ENV=test nyc mocha --require babel-register server/tests/*.js --timeout 6000 || exit 0",
     "start": "npm run build && node ./dist/server.js",
     "lint": "./node_modules/.bin/eslint server --fix",
     "createQueries": "psql -U postgres -f createQueries.sql",
+    "pretest": "psql -U postgres -f resetTables.sql",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
@@ -52,6 +53,7 @@
   "devDependencies": {
     "babel-watch": "^2.0.8",
     "coveralls": "^3.0.2",
+    "cross-env": "^5.2.0",
     "eslint": "^5.12.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
@@ -60,6 +62,7 @@
     "eslint-plugin-react": "^7.12.4",
     "istanbul": "^0.4.5",
     "mocha-lcov-reporter": "^1.3.0",
-    "nyc": "^13.1.0"
+    "nyc": "^13.1.0",
+    "supertest": "^3.4.2"
   }
 }
