--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "npm run build && node ./dist/server.js",
     "lint": "./node_modules/.bin/eslint server --fix",
     "createQueries": "psql -U postgres -f createQueries.sql",
+    "adminSeed": "babel-node adminSeed.js",
     "pretest": "psql -U postgres -f resetTables.sql",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
