--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
  - "stable"
 before_script: 
-  - psql -c 'create database politico_test;' -U postgres  
+  - psql -c 'create database db_politico_test;' -U postgres  
 scripts:
  - "npm test"
 
